# RayTracer

./: CMakeLists.txt  README.md  Shape.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  display.cpp  main.cpp  readfile.cpp  resource.h  scene6.test  variables.h
glut/: CMakeLists.txt
include/GL/: glew.h
lib/: glew.txt
scenes/: scene4-ambient.test
